assets/css/style.css
/* ... */
.about .content .btn-learn-more:hover {
  background: #ffa726;
  color: #fff;
  text-decoration: none;
}

/*--------------------------------------------------------------
# Why Us
--------------------------------------------------------------*/
.why-us .content {
  padding: 60px 100px 0 100px;
}

.why-us .content h3 {
  font-weight: 400;
  font-size: 34px;
  color: #37517e;
}

.why-us .content h4 {
  font-size: 20px;
  font-weight: 700;
  margin-top: 5px;
}

.why-us .content p {
  font-size: 15px;
}

.why-us .img {
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}

.why-us .accordion-list {
  padding: 0 100px 60px 100px;
}

.why-us .accordion-list ul {
  padding: 0;
  list-style: none;
}
.accordion-list .show{
  display: flex;;
}

/* .why-us .accordion-list li + li {
  margin-top: 15px;
} */

.why-us .accordion-list li {
  padding: 20px;
  background: #fff;
  border-radius: 4px;
}

.why-us .accordion-list a {
  display: block;
  position: relative;
  font-family: "Poppins", sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  padding-right: 30px;
  outline: none;
}

.why-us .accordion-list span {
  color: #ffa726;
  font-weight: 600;
  font-size: 18px;
  padding-right: 10px;
}

.why-us .accordion-list i {
  font-size: 24px;
  position: absolute;
  right: 0;
  top: 0;
}

.why-us .accordion-list p {
  margin-bottom: 0;
  padding: 10px 0 0 0;
}

.why-us .accordion-list .icon-show {
  display: none;
}

.why-us .accordion-list a.collapsed {
  color: #343a40;
}

.why-us .accordion-list a.collapsed:hover {
  color: #ffa726;
}

.why-us .accordion-list a.collapsed .icon-show {
  display: inline-block;
}

.why-us .accordion-list a.collapsed .icon-close {
  display: none;
}

@media (max-width: 1024px) {
  .why-us .content, .why-us .accordion-list {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (max-width: 992px) {
  .why-us .img {
    min-height: 400px;
  }
  .why-us .content {
    padding-top: 30px;
  }
  .why-us .accordion-list {
    padding-bottom: 30px;
  }
}

@media (max-width: 575px) {
  .why-us .img {
    min-height: 200px;
  }
}

/*--------------------------------------------------------------
# Skills
--------------------------------------------------------------*/
.skills .content h3 {
  font-weight: 700;
  font-size: 32px;
  color: #37517e;
  font-family: "Poppins", sans-serif;
}

.skills .content ul {
  list-style: none;
  padding: 0;
}

.skills .content ul li {
  padding-bottom: 10px;
}

.skills .content ul i {
  font-size: 20px;
  padding-right: 4px;
  color: #ffa726;
}

.skills .content p:last-child {
  margin-bottom: 0;
}

.skills .progress {
  height: 50px;
  display: block;
  background: none;
}

.skills .progress .skill {
  padding: 10px 0;
  margin: 0 0 6px 0;
  text-transform: uppercase;
  display: block;
  font-weight: 600;
  font-family: "Poppins", sans-serif;
  color: #37517e;
}

.skills .progress .skill .val {
  float: right;
  font-style: normal;
}

.skills .progress-bar-wrap {
  background: #e8edf5;
}

.skills .progress-bar {
  width: 1px;
  height: 10px;
  transition: .9s;
  background-color: #4668a2;
}

/*--------------------------------------------------------------
# Solar
--------------------------------------------------------------*/
.icon{
  width: 30px;
  height:30px;
  margin-right: 20px;
}

.solar-offer{
  display: flex;
  align-items: center;
}

.solar-offer li{
  display: flex;
    justify-content: flex-start;
    margin-left: 30px;
}

.call-to-action-solar{
  text-align: center;
}
#solar-hr1{
  position: relative;
  border: none;
  height: 5px;
  margin-left: 0;
  width: 280px;
  background: #209DD8;
  margin-bottom: 50px;
}
#solar-hr2{
  position: relative;
  border: none;
  height: 5px;
  margin-left: 0;
  width: 120px;
  background: #FFA726;
  margin-bottom: 50px;
}
#solar-hr3{
  position: relative;
  border: none;
  height: 5px;
  margin-left: 0;
  width: 110px;
  background: #FFA726;
  margin-bottom: 50px;
}
.sunrays-section .col-lg-7{
  padding-right: 150px;
}
.section-benefits .col-lg-7{
  padding-left: 150px;

}
.section-benefits2 .col-lg-7{
  padding-right: 150px;

}
.sunrays-section h3{
  color: #37517E;
}


@media (max-width: 1024px) {
  .sunrays-section .col-lg-7{
    padding-right: 0px;
  }
  .section-benefits .col-lg-7{
    padding-left: 0px;
  
  }
  .section-benefits2 .col-lg-7{
    padding-left: 0px;
  }
  .section-benefits2{
    padding:0;
  }
  .section-benefits{
    padding:0;
  }
}

/*--------------------------------------------------------------
# Services
--------------------------------------------------------------*/
.services .icon-box {
  box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
  padding: 50px 30px;
  transition: all ease-in-out 0.4s;
  background: #fff;
}

.services .icon-box .icon {
  margin-bottom: 10px;
}

.services .icon-box .icon i {
  color: #ffa726;
  font-size: 36px;
  transition: 0.3s;
}

.services .icon-box h4 {
  font-weight: 500;
  margin-bottom: 15px;
  font-size: 24px;
}

.services .icon-box h4 a {
  color: #37517e;
  transition: ease-in-out 0.3s;
}

.services .icon-box p {
  line-height: 24px;
  font-size: 14px;
  margin-bottom: 0;
}

.services .icon-box:hover {
  transform: translateY(-10px);
}

.services .icon-box:hover h4 a {
  color: #ffa726;
}




/*--------------------------------------------------------------
# Ctaiaq
--------------------------------------------------------------*/
.ctaiaq {
  background: linear-gradient(rgba(40, 58, 90, 0.5), rgba(40, 58, 90, 0.9)), url("../img/uvc-2000.jpg") fixed center center;
  background-size: cover;
  padding: 120px 0;
}

.ctaiaq h3 {
  color: #fff;
  font-size: 28px;
  font-weight: 700;
}

.ctaiaq p {
  color: #fff;
}
/* ... */

